--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@
         Front-end developer
       </p>
       <a
-        href="/portfolio"
+        href="#component-portfolio"
         class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-300 dark:focus:ring-gray-900"
       >
         My Portfolio
