--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,4 +19,8 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
-<style is:global></style>
+<style is:global>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
