--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import Hero from "../components/Hero.astro";
+import HighligthedPortfolio from "../components/HighligthedPortfolio.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <Navbar />
   <Hero />
+  <HighligthedPortfolio id="component-portfolio" />
 </Layout>
