--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const { title, subTitle, text, link, link2, image } = Astro.props.data;
       <h1
         class="max-w-2xl mb-4 text-4xl font-extrabold md:text-5xl xl:text-6xl dark:text-white"
       >
-        {title}
+        {title}<span class="text-blue-700">.</span>
       </h1>
       <p
         class="max-w-2xl mb-6 font-light text-gray-600 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-300"
