--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const { title, subTitle, text, link, link2, image } = Astro.props.data;
+const { title, subTitle, payoff, link, link2, image } = Astro.props.data;
 ---
 
 <section class="bg-white dark:bg-gray-900 h-screen">
@@ -8,25 +8,30 @@ const { title, subTitle, text, link, link2, image } = Astro.props.data;
   >
     <div class="mr-auto place-self-center lg:col-span-7">
       <h1
-        class="max-w-2xl mb-4 text-4xl font-extrabold md:text-5xl xl:text-6xl dark:text-white"
+        class="max-w-2xl mb-4 text-4xl font-extrabold md:text-5xl xl:text-8xl dark:text-white"
       >
-        {title}<span class="text-blue-700">.</span>
+        {title}<span class="text-green-700">.</span>
       </h1>
       <p
-        class="max-w-2xl mb-6 font-light text-gray-600 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-300"
+        class="max-w-2xl mb-6 font-light lg:mb-8 md:text-lg lg:text-4xl text-white dark:text-white"
       >
         {subTitle}
       </p>
+        <p
+        class="max-w-2xl mb-6 font-light lg:mb-8 md:text-lg lg:text-2xl text-white dark:text-white border-l-8 rounded border-yellow-300 py-3 px-8"
+      >
+        {payoff}
+      </p>
       <a
         href={link?.url}
-        class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-300 dark:focus:ring-gray-900"
+        class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-300 dark:focus:ring-gray-900"
       >
         {link?.title}
       </a>
       <a
         href={link2?.url}
         target={link2?.target ?? '_blank'}
-        class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
+        class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
       >
         {link2?.title}
       </a>
