--- a/src/components/HighligthedPortfolio.astro
+++ b/src/components/HighligthedPortfolio.astro
@@ -4,18 +4,18 @@ import PortfolioItem from "./PortfolioItem.astro";
 const { data } = Astro.props;
 ---
 
-<section class="bg-white dark:bg-gray-900">
-  <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
+<section id="portfolio" class="bg-white dark:bg-gray-900">
+  <div class="pt-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-sm text-center">
       <h2
         class="mb-4 text-4xl tracking-tight font-extrabold leading-tight text-gray-900 dark:text-white"
       >
         {data.title}
       </h2>
-      <p class="mb-6 font-light text-gray-500 dark:text-gray-400 md:text-lg">
-        {data.subtitle}
+      <p class="mb-6 font-light text-gray-500 dark:text-white md:text-lg">
+        {data.subtitle} 
       </p>
     </div>
   </div>
 </section>
-{data.projects.map((project: any) => <PortfolioItem data={project} />)}
+{data.projects.map((project: any, index) => <PortfolioItem data={project} index={index + 1} />)}
