--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,7 @@
     </a>
     <div class="flex md:order-2">
       <a
-        href="https://github.com/DjuriSchiffer/djurischiffer/"
+        href="https://github.com/DjuriSchiffer/"
         target="_blank"
         class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
       >
