--- a/src/components/HighligthedPortfolio.astro
+++ b/src/components/HighligthedPortfolio.astro
@@ -4,7 +4,7 @@ import PortfolioItem from "./PortfolioItem.astro";
 const { data } = Astro.props;
 ---
 
-<section id="portfolio" class="bg-white dark:bg-gray-900">
+<section id="portfolio" class="bg-white dark:bg-gray-900 mb-6">
   <div class="pt-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-sm text-center">
       <h2
@@ -12,7 +12,7 @@ const { data } = Astro.props;
       >
         {data.title}
       </h2>
-      <p class="mb-6 font-light text-gray-500 dark:text-white md:text-lg">
+      <p class="font-light text-gray-500 dark:text-white md:text-lg">
         {data.subtitle} 
       </p>
     </div>
