Removed redundant pb-6

--- a/src/components/HighligthedPortfolio.astro
+++ b/src/components/HighligthedPortfolio.astro
@@ -4,7 +4,7 @@ import PortfolioItem from "./PortfolioItem.astro";
 const { data } = Astro.props;
 ---
 
-<section id="portfolio" class="bg-white dark:bg-gray-900 mb-6">
+<section id="portfolio" class="bg-white dark:bg-gray-900">
   <div class="pt-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-sm text-center">
       <h2
